--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "clibrpg",
   "version": "0.1.0",
-  "private": true,
+  "description": "2D RPG Game with React",
+  "author": {
+    "name": "bajdcc"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/bajdcc/clibrpg.git"
+  },
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-redux": "^5.1.1",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
