--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
     "url": "git://github.com/bajdcc/clibrpg.git"
   },
   "dependencies": {
+    "antd": "^3.10.8",
+    "babel-plugin-import": "^1.11.0",
     "react": "^16.6.3",
+    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test"
   },
   "eslintConfig": {
     "extends": "react-app"
