--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^3.10.8",
     "babel-plugin-import": "^1.11.0",
     "howler": "^2.0.15",
+    "lodash": "^4.17.11",
     "react": "^16.6.3",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.3",
