--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,7 +22,7 @@ install:
   - set PATH=%APPDATA%\npm;%PATH%
   - node --version
   - npm --version
-  - npm run ci-or-install
+  - npm install
 
 before_build:
   - set PATH=%QTDIR%\bin;%PATH%
