--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,12 +6,6 @@ platform: x64
 environment:
   matrix:
     - nodejs_version: '10'
-    - nodejs_version: '9'
-    - nodejs_version: '8'
-    - nodejs_version: '7'
-    - nodejs_version: '6'
-    - nodejs_version: '5'
-    - nodejs_version: '4'
 
 branches:
   only:
@@ -27,17 +21,18 @@ install:
 before_build:
   - set PATH=%QTDIR%\bin;%PATH%
 
+build_script:
+  - npm run build
+
 artifacts:
-- path: build
-  name: build
+  - path: build
+    name: build
 
 matrix:
   fast_finish: false
 
 on_failure:
   - echo Failed
-
-build: off
 
 test_script:
   - npm test -- --no-watchman
