--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "howler": "^2.0.15",
     "lodash": "^4.17.11",
     "react": "^16.6.3",
+    "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
