--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.3",
-    "react-redux": "^5.1.1",
+    "react-redux": "6.0.0",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1"
   },
